# pictures

./: .env.example  .geocoding_cache.json  .gitignore  =3.0  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_REVIEW.md  COMPLETION_SUMMARY.md  ENHANCEMENT_INDEX.md  ENHANCEMENT_QUICK_START.md  ENHANCEMENT_README.md  ENHANCEMENT_SYSTEM.md  IMPLEMENTATION_STATUS.txt  METADATA_TRUNCATION_FIX.md  MODEL_COMPARISON_REPORT.md  PHASED_IMPLEMENTATION_PLAN.md  PIPELINE_DECOUPLING_PROPOSAL.md  README.md  REFACTORING_COMPLETE.md  REPORT_FEATURE.md  ROADMAP.md  SECURITY.md  SETUP_COMPLETE.md  SLIDE_RESTORATION_GUIDE.md  STDOUT  TEST_IMMICH.md  UPDATES.md  _picture_analyzer_shim.py  api.py  batch_analyze.sh  check_exif_usercomment.py  cli.py  cli_commands.py  compare_models.py  config.py  config.yaml  config.yaml.example  description_editor_app.py  enhancement_filters.py  examples.py  exif_handler.py  (+27 more)
.github/workflows/: ci.yml
output_test_location/: test_result_analyzed.json
output_test_location_v2/: output_analyzed.json
src/picture_analyzer/: __init__.py  __main__.py  description.py
static/: index.html
test_batch_error/2025-12-29-0001/: 2025-12-29-0001_analyzed.json
test_batch_error/2025-12-29-0002/: 2025-12-29-0002_analyzed.json
test_batch_error/2025-12-29-0003/: 2025-12-29-0003_analyzed.json
test_batch_error/2025-12-29-0004/: 2025-12-29-0004_analyzed.json
test_batch_error/2025-12-29-0005/: 2025-12-29-0005_analyzed.json
test_batch_error/2025-12-29-0006/: 2025-12-29-0006_analyzed.json
test_batch_error/2025-12-29-0007/: 2025-12-29-0007_analyzed.json
test_batch_error/2025-12-29-0008/: 2025-12-29-0008_analyzed.json
test_batch_error/2025-12-29-0009/: 2025-12-29-0009_analyzed.json
test_error/: 2025-12-29-0050_analyzed.json
test_gps/: 2025-12-29-0004_analyzed.json
test_gps_fresh/: 2025-12-29-0001_analyzed.json
test_gps_v2/: 2025-12-29-0005_analyzed.json
test_location_check/: 2025-12-29-0001_analyzed.json
test_location_dutch/: 2025-12-29-0002_analyzed.json
test_location_nl_content/: 2025-12-29-0003_analyzed.json
tests/: conftest.py
tests/unit/: test_cli.py  (+12 more)
(+112 files in other folders)
